fix alignment problem on overlay class (position:relative/absolute)

--- a/liferay-plugins-sdk-6.2GA4/themes/GFBio-2.0-bootstrap3-theme/docroot/_diffs/css/custom.css
+++ b/liferay-plugins-sdk-6.2GA4/themes/GFBio-2.0-bootstrap3-theme/docroot/_diffs/css/custom.css
@@ -1015,6 +1015,9 @@ Liferay fixes - deprecated classes
     position: absolute;
 }
 
+.journal-content-article > .parallax > .overlay {
+    position: relative;
+}
 
 /*=========================================================
 Liferay fixes - content
